add_subdirectory(authenticator)
add_subdirectory(fast_connection)
add_subdirectory(protocol)
add_subdirectory(random_salt)
add_subdirectory(logger)

include_directories(fast_connection)
include_directories(protocol)
include_directories(authenticator)
include_directories(auth_callback)
include_directories(random_salt)
include_directories(logger)
include_directories(${PROJECT_BINARY_DIR}/src)

add_library(suto_pam OBJECT suto_pam.cpp)
